# Kenchiku

./: .editorconfig  .gitlab-ci.yml  .luarc.json  CHANGELOG.md  Cargo.toml  README.md  flake.nix  schema.lua
.gitlab/: renovate.json5
completions/: kenchiku.bash  kenchiku.fish  kenchiku.usage  kenchiku.zsh
crates/kenchiku-cli/: Cargo.toml
crates/kenchiku-cli/src/: main.rs
crates/kenchiku-common/: Cargo.toml
crates/kenchiku-common/src/: lib.rs  meta.rs  minijinja_extras.rs
crates/kenchiku-lua/: Cargo.toml
crates/kenchiku-lua/src/: exec.rs  fs.rs  json.rs  lib.rs  log.rs  re.rs  tmpl.rs  values.rs
crates/kenchiku-mcp/: Cargo.toml
crates/kenchiku-mcp/src/: lib.rs  server.rs  server_test.rs  session.rs
crates/kenchiku-scaffold/: Cargo.toml
crates/kenchiku-scaffold/src/: discovery.rs  lib.rs  meta.rs  requirer.rs  utils.rs
docs/: apis.md  cli.md  examples.md  index.md  luals_setup.md  mcp.md  scaffolds.md  template_extras.md  usage.md
nix/repo/: ci.nix  devShells.nix  docs.nix  flake.nix  packages.nix  soonix.nix
scaffolds/example/: example.txt.tmpl  module.lua  scaffold.lua
