[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
kenchiku-scaffold = { path = "crates/kenchiku-scaffold" }
kenchiku-lua = { path = "crates/kenchiku-lua" }
kenchiku-common = { path = "crates/kenchiku-common" }
kenchiku-mcp = { path = "crates/kenchiku-mcp" }

eyre = "0.6.12"
tracing = "0.1.43"
mlua = { version = "0.11.5", features = ["vendored", "send", "luau", "serde"] }
minijinja = { version = "2.14.0", features = ["loader", "builtins"] }
serde = "1.0.228"
tempfile = "3"
