[package]
name = "kenchiku-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "kenchiku"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
eyre = "0.6.12"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
