[package]
name = "kenchiku-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "kenchiku"
path = "src/main.rs"

[dependencies]
kenchiku-scaffold.workspace = true
tracing.workspace = true
eyre.workspace = true
clap = { version = "4.5.53", features = ["derive"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
