[package]
name = "kenchiku-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "kenchiku"
path = "src/main.rs"

[dependencies]
kenchiku-scaffold.workspace = true
kenchiku-common.workspace = true
kenchiku-mcp.workspace = true

tracing.workspace = true
eyre.workspace = true
tempfile.workspace = true
inquire = "0.9.1"
clap = { version = "4.5.53", features = ["derive"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
serde_json = "1.0.147"
