[package]
name = "kenchiku-lua"
version.workspace = true
edition.workspace = true

[dependencies]
kenchiku-common.workspace = true

eyre.workspace = true
mlua.workspace = true
tracing.workspace = true
minijinja.workspace = true
regex = "1.12.2"
serde_json = "1.0.145"

[dev-dependencies]
tempfile.workspace = true
