[package]
name = "kenchiku-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
kenchiku-scaffold.workspace = true

eyre.workspace = true
tracing.workspace = true
rmcp = { version = "0.11.0", features = ["server", "client", "macros", "transport-io"] }
tokio = { version = "1.47.2", features = ["full"] }
serde = "1.0.228"
serde_json = "1.0.145"

[dev-dependencies]
tempfile.workspace = true
